--- a/vetri/mathapp/templates/mathapp/math.html
+++ b/vetri/mathapp/templates/mathapp/math.html
@@ -1,40 +1,4 @@
-# Ex.04 Design a Website for Server Side Processing
-## Date:10-12-2025
-
-## AIM:
-To create a web page to calculate vehicle mileage and fuel efficiency using server-side scripts.
-
-## FORMULA:
-M = D / F
-<br> M --> Mileage (in km/l)
-<br> D --> Distance Travelled (in km)
-<br> F --> Fuel Consumed (in l)
-
-## DESIGN STEPS:
-
-### Step 1:
-Clone the repository from GitHub.
-
-### Step 2:
-Create Django Admin project.
-
-### Step 3:
-Create a New App under the Django Admin project.
-
-### Step 4:
-Create python programs for views and urls to perform server side processing.
-
-### Step 5:
-Create a HTML file to implement form based input and output.
-
-### Step 6:
-Publish the website in the given URL.
-
-## PROGRAM:
-```
-math.html 
-
-html>
+<html>
     <head>
         <title>MY Milage</title>
         <style>
@@ -100,39 +64,3 @@ html>
         </div>
     </body>
 </html>
-
-views.py
-
-from django.shortcuts import render
-def milage(request):
-    km = int(request.POST.get('killometer','0'))
-    l = int(request.POST.get('liter','0'))
-    mils = km/l if request.method == 'POST' else 0
-    print("killometer=",km)
-    print("liter=",l)
-    print("milage=",mils)
-    return render(request, 'mathapp/math.html', {'km': km, 'l': l, 'mils': mils})
-
-urls.py
-
-from django.shortcuts import render
-def milage(request):
-    km = int(request.POST.get('killometer','0'))
-    l = int(request.POST.get('liter','0'))
-    mils = km/l if request.method == 'POST' else 0
-    print("killometer=",km)
-    print("liter=",l)
-    print("milage=",mils)
-    return render(request, 'mathapp/math.html', {'km': km, 'l': l, 'mils': mils})
-
-
-```
-
-## OUTPUT - SERVER SIDE:
-![alt text](<Screenshot (25).png>)
-
-## OUTPUT - WEBPAGE:
-![alt text](<Screenshot (24).png>)
-
-## RESULT:
-The a web page to calculate vehicle mileage and fuel efficiency using server-side scripts is created successfully.
